fix styling of work page to make it look better on tablet

--- a/src/client/style/work.css
+++ b/src/client/style/work.css
@@ -88,7 +88,6 @@
 }
 .work-page .tags {
   transition: all .2s ease-in-out;
-  margin-top: 40px;
 }
 .work-page .work-details {
   padding: 40px 20px;
@@ -97,8 +96,8 @@
   margin-bottom: 60px;
 }
 .work-page .expand-btn {
-  margin-top: 20px;
-  margin-left: 10px;
+  margin-top: 30px;
+  margin-left: 3px;
 }
 .work-page .tag {
   display: inline-block;
@@ -120,13 +119,12 @@
 
 
 .work-details .info {
-  vertical-align: top;
   display: inline-block;
-  padding-left: 40px;
   font-family: 'Raleway', sans-serif;
   color: #545454;
   font-size: 18px;
-  width: 60%;
+  padding-left: 40px;
+  padding-bottom: 40px;
 }
 .work-details .title {
   font-family: 'Lora', serif;
@@ -171,7 +169,7 @@
   vertical-align: top;
 }
 .work-page .work-details img {
-  height: 500px;
+  width: 100%;
 }
 .work-page .tag-group {
   margin-top: 10px;
